Fix text alignment in update available message in landscape

--- a/holdingbuddy/static/style.css
+++ b/holdingbuddy/static/style.css
@@ -33,6 +33,7 @@ div.controls {
     background-color: #333;
     opacity: .9;
     z-index: 1000;
+    text-align: center;
 }
 
 #update-available p {
